Dodałam odnośniki i poprawiłam aboutus

--- a/about_us.html
+++ b/about_us.html
@@ -9,6 +9,10 @@
         <a href="./testimonials.html">Testimonials</a>
         <a class = "chosen_one" href="./about_us.html">About us</a>
     </div>
+    
+    <div>
+      <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
+    </div>
 
     <div class="tab_title">
         <title>About us</title> 
@@ -78,6 +82,6 @@
 
 
         <hr>
-        
+        <script src="java.js"></script>       
     </body>
 </html>
