--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <a href="./about_us.html">About us</a>
   </div>
 
+  <div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
+  </div>
+  
   
   <div class="tab_title">
     <title>Toxicity Detection Tool</title> 
@@ -51,8 +55,8 @@
     </div>
         <h2 class="collapsible"> Why would you want to detect toxicity </h2>
           <div class="content">
-            <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. <br>Therefore, moderating and monitoring these toxic comments is such a crucial issue. That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' mental health. 
-              On the other hand, this type of comments does not encourage users to take their part in different discussions.  
+            <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. <br>Therefore, moderating and monitoring these toxic comments is such a crucial issue. <br>That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' mental health. 
+             <br> On the other hand, this type of comments does not encourage users to take their part in different discussions.  
             </p>
           </div>
         <h2 class="collapsible">How does it work?</h2>
@@ -85,6 +89,6 @@
                          });
                        }
                     </script>
-
+<script src="java.js"></script>
     </body>
 </html>
