--- a/news.html
+++ b/news.html
@@ -9,7 +9,9 @@
     <a href="./testimonials.html">Testimonials</a>
       <a href="./about_us.html">About us</a>
   </div>
-
+  <div>
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
+  </div>
   <div class="tab_title">
     <title>News</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
@@ -37,6 +39,6 @@
 
 
         <hr>
-        
+        <script src="java.js"></script>     
 </body>
 </html>
