--- a/product.html
+++ b/product.html
@@ -8,7 +8,9 @@
         <a href="./testimonials.html">Testimonials</a>
         <a href="./about_us.html">About us</a>
       </div>
-
+      <div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
+      </div>
     <div class="tab_title">
     <title>Product</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
@@ -26,5 +28,6 @@
           </div>
         <hr>
         <h1 id="product_info">Bla bla bla</h1>
+        <script src="java.js"></script>
     </body>
 </html>
