--- a/testimonials.html
+++ b/testimonials.html
@@ -8,7 +8,9 @@
         <a class = "chosen_one" href="./testimonials.html">Testimonials</a>
         <a href="./about_us.html">About us</a>
       </div>
-
+      <div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
+      </div>
     <div class="tab_title">
     <title>Testimonials</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
@@ -28,5 +30,6 @@
           </div>
         <hr>
         <h1 id="testimonials_info">Bla bla bla</h1>
+        <script src="java.js"></script>
     </body>
 </html>
