--- a/news.html
+++ b/news.html
@@ -43,17 +43,18 @@
   <hr>
   <h1 id="news_info">Bla bla bla</h1>
 
-
-
-
-
-
-
-
-        <hr>
-
-        <script src="java.js"></script>  
-        
+     <!--Loading screen-->   
+     <div class='spinner-wrapper'>
+      <div class="spinner"></div>
+    </div>
+    <script>
+      let spinnerWrapper = document.querySelector('.spinner-wrapper');
+  
+      window.addEventListener('load', function () {
+          // spinnerWrapper.style.display = 'none';
+          spinnerWrapper.parentElement.removeChild(spinnerWrapper);
+      });
+  </script>
 
         <script src="java.js"></script>     
 
