--- a/news.html
+++ b/news.html
@@ -40,8 +40,16 @@
     <div class="centered">News</div>
     <a class ="reference1" href="#news_info"><br><br><br>What's new!</a>
   </div>
+
   <hr>
-  <h1 id="news_info">Bla bla bla</h1>
+  <h1 id="news_info">Latest news:</h1><br>
+  <div class = "date">12/04/22</div>
+  <div class="infoBox">✨✨Toxicity Detection Tool now on Twitter!✨✨</div><br><br>
+  <div class = "date">03/01/22</div>
+  <div class="infoBox">Our tool helps keep children's websites safe and sound!👶👶👶 Shout-out to Babybobo.com!</div><br><br>
+  <div class = "date">13/12/21</div>
+  <div class="infoBox">New member of our team is here. Please welcome 🔥<b>Marika!</b>🔥</div>
+  <hr>
 
      <!--Loading screen-->   
      <div class='spinner-wrapper'>
