--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
             </div>
           <h2 class="collapsible">How does it work?</h2>
             <div class="content">
-              <p> Sample text </p>
+              <p> Our website is a free system for toxicity detection tool. The tool uses a Perspective API(Application Programming Interface)<br>
+               which employs machine learning to identify "toxicity" in input texts. <br>
+               The API uses machine learning models to score the toxicity of a sample text.</p>
             </div>
     </div>
     <!--Box-->
