--- a/product.html
+++ b/product.html
@@ -38,7 +38,14 @@
             <a class ="reference1" href="#product_info"><br><br><br>Get to know our product!</a>
           </div>
         <hr>
-        <h1 id="product_info">Bla bla bla</h1>
+        <h1 id="product_info">How does it work?</h1><br>
+          <p> Our website is a free system for toxicity detection tool. The tool uses a Perspective API
+           which employs machine learning to identify "toxicity" in input texts. 
+           <br>The API uses machine learning models to score the toxicity of a sample text. <br><br> Tu będzie tutorial.</p>
+
+
+
+
         <script src="java.js"></script>
      <!--Loading screen-->   
      <div class='spinner-wrapper'>
