Texbox & submit button centered
reviews

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <textarea name="textbox" id="textbox"> This is a sample text you idiot. Shut up and write something down! :)
           </textarea><br>
           </form>
-          <input class='dark radious' type="submit" value="Submit">
+          <input id='submitbutton' class='dark radious' type="submit" value="Submit">
     </div>
      <!--Loading screen-->   
     <div class='spinner-wrapper'>
