--- a/testimonials.html
+++ b/testimonials.html
@@ -40,41 +40,45 @@
             <div class="centered">Testimonials</div>
             <a class ="reference1" href="#testimonials_info"><br><br><br>Meet our customers!</a>
           </div>
+
+          
         <hr>
         <h1 id="testimonials_info">What our clients think about the app?</h1>
         
+
+
         <div id="testimonials">
-          <h3 id="score">App's score cdn</h3>
+          <!--  <h3 id="score">App's score cdn</h3> -->
           <br>
-          <h5 class="grade">5/5</h5>
-          <p>Everything is great!</p>
+          <h5 class="grade">★★★★★</h5> 
+          <div class = "infoBox2">Everything is great!</div>
           <br>
-          <h5 class="grade">5/5</h5>
-          <p>Great app!</p>
+          <h5 class="grade">★★★★★</h5>
+          <div class = "infoBox2">Great app!!!!</div>
           <br>
-          <h5 class="grade">4/5</h5>
-          <p>Everything works as it is supposed to, however I had to wait an hour because of some technical issues.</p>
+          <h5 class="grade">★★★★☆</h5>
+          <div class = "infoBox2">Everything works as it is supposed to, however I had to wait an hour because of some technical issues.</div>
           <br>
-          <h5 class="grade">3/5</h5>
-          <p>There should be speech detector as well…</p>
+          <h5 class="grade">★★★☆☆</h5>
+          <div class = "infoBox2">There should be speech detector as well…</div>
           <br>
-          <h5 class="grade">5/5</h5>
-          <p>Love this website! It made my life easier.</p>
+          <h5 class="grade">★★★★★</h5>
+          <div class = "infoBox2">Love this website! It made my life easier.</div>
           <br>
-          <h5 class="grade">4/5</h5>
-          <p>The app is great but I’m not a fan of its design, hate blue…</p>
+          <h5 class="grade">★★★★☆</h5>
+          <div class = "infoBox2">The app is great but I’m not a fan of its design, hate blue…</div>
           <br>
-          <h5 class="grade">4/5</h5>
-          <p>It’s really well functioning website. I’m satisfied by the quality of its analysis, however I would love to have an app version on my other devices as well.</p>
+          <h5 class="grade">★★★★☆</h5>
+          <div class = "infoBox2">It’s really well functioning website. I’m satisfied by the quality of its analysis, however I would love to have an app version on my other devices as well.</div>
           <br>
-          <h5 class="grade">2/5</h5>
-          <p>It looks nice, but I have never seen worse speech analysis…..</p>
+          <h5 class="grade">★★☆☆☆</h5>
+          <div class = "infoBox2">It looks nice, but I have never seen worse speech analysis…..</div>
           <br>
-          <h5 class="grade">5/5</h5>
-          <p>Love it! I’m glad that there are still people engaged in developing little projects.</p>
+          <h5 class="grade">★★★★★</h5>
+          <div class = "infoBox2">Love it! I’m glad that there are still people engaged in developing little projects.</div>
           <br>
-          <h5 class="grade">4/5</h5>
-          <p>I mean… Everything seems to be okay, but… It takes so much time.</p>
+          <h5 class="grade">★★★★☆</h5>
+          <div class = "infoBox2">I mean… Everything seems to be okay, but… It takes so much time.</div>
         </div>
 
         <script src="java.js"></script>
