--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 
@@ -25,36 +25,36 @@
       function darkMode() {
         var element = document.body;
         element.classList.toggle('dark-mode');
-      }     
+      }
     </script>
   </div>
 
   <div>
     <button onclick="topFunction()" id="myBtn" title="Go to top"><b>↑</b></button>
   </div>
-  
-  
+
+
   <div class="tab_title">
-    <title>Toxicity Detection Tool</title> 
+    <title>Toxicity Detection Tool</title>
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
-  </div>  
-    
+  </div>
+
   <body>
     <div class="main_title">
       <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/index.jpg?raw=true" alt="technology"  style="width:100%;">
       <div class="centered">Toxicity Detection Tool</div>
       <a class ="reference1" href="#main_info"><br><br><br>Get started!</a>
   </div>
-  
+
     <br>
     <div id = "main_info">
-      <h1>All you wanted to know about toxicity:</h1>  
-      <br>    
+      <h1>All you wanted to know about toxicity:</h1>
+      <br>
         <h2 class="collapsible"> What's toxicity?</h2>
           <div class="content">
-            <p>We live during the time of significant growth of the Internet and social media usage. <br>It is undeniable that worldwide communication and creating complex community became crucial in our everyday live. 
+            <p>We live during the time of significant growth of the Internet and social media usage. <br>It is undeniable that worldwide communication and creating complex community became crucial in our everyday live.
             <br>
-            People's usage of the internet includes posting and commenting someone's activity on different portals. <br>Being online gives us opportunity to express our opinions anonymously, which causes in growing presence of hate speech. 
+            People's usage of the internet includes posting and commenting someone's activity on different portals. <br>Being online gives us opportunity to express our opinions anonymously, which causes in growing presence of hate speech.
             <br>
               According to the website of a <a href='https://support.perspectiveapi.com/s/' target='_blank'>Perspective API</a> toxicity might be explained as: "a rude, disrespectful, or unreasonable comment that is likely to make you leave discussion."
             </p>
@@ -62,11 +62,11 @@
 
           <h2 class="collapsible"> Why would you want to detect toxicity </h2>
             <div class="content">
-              <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. <br>Therefore, moderating and monitoring these toxic comments is such a crucial issue. <br>That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' mental health. 
-              <br> On the other hand, this type of comments does not encourage users to take their part in different discussions.  
+              <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. <br>Therefore, moderating and monitoring these toxic comments is such a crucial issue. <br>That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' mental health.
+              <br> On the other hand, this type of comments does not encourage users to take their part in different discussions.
               </p>
             </div>
-       
+
     </div>
     <!--Box-->
     <div id="box">
@@ -78,20 +78,19 @@
           </form>
           <input id='submitbutton' class='dark radious' type="submit" value="Submit">
     </div>
-     <!--Loading screen-->   
+     <!--Loading screen-->
     <div class='spinner-wrapper'>
       <div class="spinner"></div>
     </div>
     <script>
       let spinnerWrapper = document.querySelector('.spinner-wrapper');
-  
+
       window.addEventListener('load', function () {
           // spinnerWrapper.style.display = 'none';
           spinnerWrapper.parentElement.removeChild(spinnerWrapper);
       });
   </script>
-
-
-<script src="java.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="module" src="script.js"></script>
     </body>
 </html>
