--- a/about_us.html
+++ b/about_us.html
@@ -119,7 +119,7 @@
         <div class="pic4">
             <h1 class="Marika">Marika L.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="https://ibb.co/gFSH6Ht" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text">Hello World, I'm Marika.I have completed my BA <br>
                     degree in Asia Pacific Studies. I am currently studying <br>
