--- a/index.html
+++ b/index.html
@@ -67,16 +67,19 @@
               </p>
             </div>
 
-    </div>
     <!--Box-->
+    <h1></h1><label for="textbox">Try it out! Insert your text here:</label><br> </h1>
     <div id="box">
-        <form action="/html/tags/html_form_tag_action.cfm" method="post"> <br>
-          <h1> Try it out! Insert your text here: </h1>
-          <br>
-          <textarea name="textbox" id="textbox"> This is a sample text you idiot. Shut up and write something down! :)
-          </textarea><br>
-          </form>
-          <input id='submitbutton' class='dark radious' type="submit" value="Submit">
+      <form onsubmit="perspective_api_call()">
+        <br>
+
+        <input type="text" id="textBox" />
+        <input id='submitbutton' class='dark radious' type="submit" value="Submit" />
+      </form>
+      <ul id="results">Results: </ul>
+  </div>
+
+
     </div>
      <!--Loading screen-->
     <div class='spinner-wrapper'>
@@ -90,7 +93,36 @@
           spinnerWrapper.parentElement.removeChild(spinnerWrapper);
       });
   </script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type="module" src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="script.js"></script>
+
     </body>
+
+     <!--charts-->
+
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+
+      function drawChart() {
+
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+
+        ]);
+
+        var options = {
+          title: 'My Daily Activities'
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+        chart.draw(data, options);
+      }
+    </script>
+    <div id="piechart" style="width: 900px; height: 500px;"></div>
+
 </html>
