Dodaje funkje z lista słów negatywnych

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         <input type="text" id="textBox" />
         <input id='submitbutton' class='dark radious' type="submit" value="Submit" />
       </form>
-      <ul id="results">Results: </ul>
+      <ul id="results">Toxicity level: </ul>
+     <p>Negatively charged: </p>
+     <ul id="resultsK">Negatively charged: </ul>
   </div>
 
     </div>
