--- a/about_us.html
+++ b/about_us.html
@@ -42,11 +42,11 @@
             <a class ="reference1" href="#KasiaA"><br><br><br>Get to know us!</a>
         </div>
 <hr>
-
+<div id="photo_container">
         <div class="pic1">
           <h1 id="KasiaA">Kasia A.</h1>
             <center><div class="cool_photo">
-              <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo" class="responsive"/>
+              <img class="profile_photo" src="Profile%20photos/kasiaa.png" alt="profile_photo" class="responsive"/>
               <div class="overlay">
                 <div class="text">Hello World, I'm Kasia<br>
                   <br>
@@ -65,7 +65,7 @@
         <div class="pic2">  
             <h1 class="Ania">Ania C.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/278150816_368086591901775_7564695880168976261_n.jpg?raw=true" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text">Hi, my name is Ania. I have been working <br>
                     as an English tutor for several years. I graduated <br>
@@ -91,7 +91,7 @@
         <div class="pic3">
             <h1 class="KasiaS">Kasia S.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="Profile%20photos/kasia_s.jpg.JPG" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text"> I am an English translator with several years of <br>
                     experience, however, currently, my attention <br>
@@ -119,7 +119,7 @@
         <div class="pic4">
             <h1 class="Marika">Marika L.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="https://ibb.co/gFSH6Ht" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="Profile%20photos/281904317-720325456055385-2024247439841863436-n.jpg" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text">Hello World, I'm Marika.I have completed my BA <br>
                     degree in Asia Pacific Studies. I am currently studying <br>
@@ -139,7 +139,8 @@
               </div></center>
 
         </div>
-        <script src="java.js"></script>   
+      </div>
+        <script src="script.js"></script>   
          <!--Loading screen-->   
          <div class='spinner-wrapper'>
           <div class="spinner"></div>
