--- a/testimonials.html
+++ b/testimonials.html
@@ -81,7 +81,7 @@
           <div class = "infoBox2">I mean… Everything seems to be okay, but… It takes so much time.</div>
         </div>
 
-        <script src="java.js"></script>
+        <script src="script.js"></script>
 
 
              <!--Loading screen-->   
