--- a/news.html
+++ b/news.html
@@ -64,7 +64,7 @@
       });
   </script>
 
-        <script src="java.js"></script>     
+<script src="script.js"></script>     
 
 </body>
 </html>
