--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
 
 
@@ -79,6 +80,8 @@
      <p>Negatively charged: </p>
      <ul id="resultsK">Negatively charged: </ul>
   </div>
+  <canvas id="myChart" width="400" height="400"></canvas>
+
 
     </div>
      <!--Loading screen-->
