Poprwiłam layout textboxa na indexie, wyśrodkowałam gwiazdki na respon., usunęłam interpunkcję z listy słów neg, zmieniłam zdjęcia

--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
               <br> On the other hand, this type of comments does not encourage users to take their part in different discussions.
               </p>
             </div>
+            <br><br>
 
     <!--Box-->
-    <h1></h1><label for="textbox">Try it out! Insert your text here:</label><br> </h1>
+    <h1><label for="textbox">Try it out! Insert your text here:</label><br> </h1>
     <div id="box">
       <form id="myForm">
         <br>
-        <input type="text" id="textBox" />
+        <input type="text" id="textBox"/><br><br>
         <input id='submitbutton' class='dark radious' type="submit" value="Submit" />
       </form>
       <ul id="results">Toxicity level: </ul>
