--- a/product.html
+++ b/product.html
@@ -46,7 +46,7 @@
 
 
 
-        <script src="java.js"></script>
+        <script src="script.js"></script>
      <!--Loading screen-->   
      <div class='spinner-wrapper'>
       <div class="spinner"></div>
