troche poprawiłam wykresy

--- a/about_us.html
+++ b/about_us.html
@@ -91,7 +91,7 @@
         <div class="pic3">
             <h1 class="KasiaS">Kasia S.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="Profile%20photos/kasia_s.jpg.JPG" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/kasia_s.jpg.JPG?raw=true" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text"> I am an English translator with several years of <br>
                     experience, however, currently, my attention <br>
