--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
      <p>Negatively charged: </p>
      <ul id="resultsK">Negatively charged: </ul>
   </div>
-  <canvas id="myChart" width="550" height="550"></canvas>
+  <canvas id="toxChart" width="550" height="550"></canvas>
+  <canvas id="sexChart" width="550" height="550"></canvas>
+  <canvas id="thrChart" width="550" height="550"></canvas>
   <canvas id="pieChart" width="550" height="550"></canvas>
 
 
@@ -99,6 +101,7 @@
       });
   </script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
 
     </body>
