Małe poprawki, chyba wyglada okej

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </p>
           </div>
 
-          <h2 class="collapsible"> Why would you want to detect toxicity </h2>
+          <h2 class="collapsible"> Why would you want to detect toxicity? </h2>
             <div class="content">
               <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. <br>Therefore, moderating and monitoring these toxic comments is such a crucial issue. <br>That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' mental health.
               <br> On the other hand, this type of comments does not encourage users to take their part in different discussions.
@@ -77,9 +77,9 @@
         <input type="text" id="textBox"/><br><br>
         <input id='submitbutton' class='dark radious' type="submit" value="Submit" />
       </form>
-      <ul id="results">Toxicity level: </ul>
-     <p>Negatively charged: </p>
-     <ul id="resultsK">Negatively charged: </ul>
+      <ul id="results"> </ul>
+
+     <ul id="resultsK"></ul>
   </div>
 
   <canvas id="toxChart" width="450" height="450"></canvas> 
