--- a/news.html
+++ b/news.html
@@ -48,7 +48,13 @@
   <div class = "date">03/01/22</div>
   <div class="infoBox">Our tool helps keep children's websites safe and sound!👶👶👶 Shout-out to Babybobo.com!</div><br><br>
   <div class = "date">13/12/21</div>
-  <div class="infoBox">New member of our team is here. Please welcome 🔥<b>Marika!</b>🔥</div>
+  <div class="infoBox">New member of our team is here. Please welcome 🔥<b>Marika!</b>🔥</div><br><br>
+  <div class = "date">12/04/21</div>
+  <div class="infoBox">New member of our team is here. Please welcome 😍<b>Ania C.!</b>😍</div><br><br>
+  <div class = "date">04/03/21</div>
+  <div class="infoBox">New member of our team is here. Please welcome 😄<b>Kasia S.!</b>😄</div><br><br>
+  <div class = "date">17/02/21</div>
+  <div class="infoBox">First day of our project! Let's hope for the best!!!👌👌👌</div>
   <hr>
 
      <!--Loading screen-->   
