--- a/about_us.html
+++ b/about_us.html
@@ -128,8 +128,7 @@
         <div class="pic4">
           <h1 class="KasiaA">Kasia A.</h1>
             <center><div class="cool_photo">
-                <img class="profile_photo" src="https://ibb.co/gFSH6Ht" alt="profile_photo" class="responsive"/>
-                <img class="profile_photo" src="Profile%20photos/281904317-720325456055385-2024247439841863436-n.jpg" alt="profile_photo" class="responsive"/>
+                <img class="profile_photo" src="Profile%20photos/kasiaa.png" alt="profile_photo" class="responsive"/>
                 <div class="overlay">
                   <div class="text">Hello World, I'm Marika.I have completed my BA <br>
                     degree in Asia Pacific Studies. I am currently studying <br>
