--- a/product.html
+++ b/product.html
@@ -41,7 +41,10 @@
         <h1 id="product_info">How does it work?</h1><br>
           <p> Our website is a free system for toxicity detection tool. The tool uses a Perspective API
            which employs machine learning to identify "toxicity" in input texts. 
-           <br>The API uses machine learning models to score the toxicity of a sample text. <br><br> Tu będzie tutorial.</p>
+           <br>The API uses machine learning models to score the toxicity of a sample text. <br><br> Tu będzie tutorial.
+          </p>
+          <center><video width=60% height=60% autoplay muted controls loop>
+            <source src="film.mp4" type="video/mp4"> </video></center>          
 
 
 
